# dspace-submission-composer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  dev-build.yml  prod-promote.yml  stage-build.yml
docs/: how_to_run.md
dsc/: __init__.py  base.py  cli.py  config.py  exceptions.py  item_submission.py  report.py  s3.py  ses.py  sqs.py
dsc/db/: exceptions.py  item.py  models.py
dsc/reports/: __init__.py  base.py  create_batch.py  digitized_theses.py  finalize.py  reconcile.py  report.py  submit.py
dsc/reports/templates/: create_summary.txt  finalize_summary.txt  submit_summary.txt
dsc/templates/html/: base.html  finalize.html
dsc/templates/plain_text/: base.txt  finalize.txt  reconcile.txt
dsc/utilities/: __init__.py
dsc/utilities/aws/: __init__.py  s3.py  ses.py  sqs.py
dsc/utilities/validate/: schemas.py
dsc/utils/aws/: __init__.py  metrics.py  s3.py  ses.py  sqs.py
dsc/workflows/: __init__.py  archivesspace.py  demo.py  opencourseware.py  sccs.py  wiley.py
dsc/workflows/archivesspace/: __init__.py  metadata_mapping.json  transformer.py  workflow.py
dsc/workflows/base/: __init__.py  base_workflow.py  simple_csv.py  transformer.py  workflow.py
dsc/workflows/digitized_theses/: __init__.py  transformer.py  workflow.py
dsc/workflows/metadata_mapping/: archivesspace.json  demo.json  opencourseware.json  sccs.json  wiley.json
dsc/workflows/opencourseware/: __init__.py  transformer.py  workflow.py
dsc/workflows/sccs/: __init__.py  metadata_mapping.json  transformer.py  workflow.py
dsc/workflows/simple_csv/: __init__.py  workflow.py
tests/: conftest.py  test_base_workflow.py  test_cli.py  test_config.py  test_db.py  test_item_submission.py  test_itemsubmission.py  test_report.py  test_s3.py  test_ses.py  test_simple_csv_workflow.py  test_sqs.py  test_transformer_opencourseware.py  test_utilities.py  test_workflow.py  test_workflow_archivesspace.py  test_workflow_base.py  test_workflow_opencourseware.py  test_workflow_sccs.py  test_workflow_simple_csv.py  test_workflow_wiley.py
tests/fixtures/: demo_metadata_mapping.json  test_metadata_mapping.json
tests/fixtures/digitized-theses/: alma_sru_response_multiple_records.xml  alma_sru_response_no_record.xml  alma_sru_response_single_record.xml  (+2 more)
(+17 files in other folders)
