# We do our best to sync this template with the latest version in our internal documentation.
# For MIT developers, we strongly recommend copying the pyproject.toml template from:
# https://mitlibraries.atlassian.net/wiki/spaces/IN/pages/3432415247/Python+Project+Linters#Template-for-pyproject.toml

[project]
name = "dsc"
version = "1.0" # See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#version
requires-python = "~=3.12.0"

dependencies = [
    "boto3>=1.42.30",
    "boto3-stubs[essential, ses]>=1.42.30",
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "pandas>=2.3.3",
    "pynamodb>=6.1.0",
    "sentry-sdk>=2.50.0",
    "smart_open[s3]>=7.5.0"
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "coveralls>=4.0.2",
    "freezegun>=1.5.5",
    "moto[server]>=5.1.20",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "types-jsonschema>=4.26.0.20260109"
]

[tool.black]
line-length = 90

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["smart_open"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py312"

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    # default
    "C90",
    "COM812",
    "D100",
    "D101", 
    "D102",
    "D103",
    "D104", 
    "D107",
    "EM101",
    "EM102",
    "G004",
    "ISC001", 
    "N812", 
    "PLR0912",
    "PLR0913", 
    "PLR0915",
    "PTH", 
    "S321",
    "TRY003", 
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.scripts]
dsc = "dsc.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dsc"]